ctowasm/test/samples/error/declarations/no_type_specifiers.c
// Test declaration with no type specifiers. Violates 6.7.2/2 of C17 standard.
int main() {
  const x;
}